--- a/weather.html
+++ b/weather.html
@@ -50,6 +50,7 @@
   <footer>
     <div class="row text-center">
       <div class="col-lg-12">
+        <h4><a href="https://darksky.net/poweredby/">Powered by Dark Sky</a></h4>
         <h5>Made by Dani V Cupples</h5>
       </div>
     </div>
