full functionality. very basic style

--- a/weather.html
+++ b/weather.html
@@ -15,6 +15,7 @@
     </div>
   </div>
 
+<div class="main-content">
   <div class="row text-center">
     <div class="col-lg-12">
       <p id="weather-icon"></p>
@@ -36,21 +37,20 @@
   </div>
 
   <div class="row text-center">
-    <div class="col-lg-12">
-      <p><span id="humidity">humid</span>% humidity</p>
+    <div class="col-lg-12 humidity">
+      <p><span id="humidity">humid</span> humidity</p>
     </div>
   </div>
+</div>
   <div class="row text-center">
     <div class="col-lg-12">
-      <button id="units">&#8451 / &#8457</button>
+      <button id="units">&deg;C / &deg;F</button>
     </div>
-  </div>
-
   </div>
   <footer>
     <div class="row text-center">
       <div class="col-lg-12">
-        <h4><a href="https://darksky.net/poweredby/">Powered by Dark Sky</a></h4>
+        <h4><a href="https://www.wunderground.com"><img class="img-responsive" alt="weather underground logo" src="https://icons.wxug.com/logos/PNG/wundergroundLogo_4c_rev_horz.png" width="20%"></a></h4>
         <h5>Made by Dani V Cupples</h5>
       </div>
     </div>
