--- a/weather.html
+++ b/weather.html
@@ -10,7 +10,7 @@
 <body>
 <div class="container-fluid">
   <div class="row text-center">
-    <div id="current-weather" class="col-lg-12 jumbotron">
+    <div id="current-weather" class="col-lg-12 header">
       <h1><span id="location">wherever you are</span></h1>
     </div>
   </div>
